# ComfyUI_YuE

./: .gitignore  20250224.json  NOTICE  README.md  __init__.py  pyproject.toml  requirements.txt  top_200_tags.json  yue_node.py
inference/: codecmanipulator.py  common.py  infer.py  infer_postprocess.py  infer_stage1.py  infer_stage2.py
inference/xcodec_mini_infer/: vocoder.py
inference/xcodec_mini_infer/RepCodec/repcodec/: RepCodec.py  tokenize.py
inference/xcodec_mini_infer/RepCodec/repcodec/configs/: repcodec_dim768.yaml
inference/xcodec_mini_infer/RepCodec/repcodec/modules/: decoder.py  encoder.py  projector.py  quantizer.py  residual_unit.py
inference/xcodec_mini_infer/decoders/: config.yaml
inference/xcodec_mini_infer/descriptaudiocodec/dac/model/: __init__.py
inference/xcodec_mini_infer/descriptaudiocodec/dac/nn/: __init__.py
inference/xcodec_mini_infer/models/: soundstream_hubert_new.py
inference/xcodec_mini_infer/quantization/: core_vq_lsx_version.py
inference/xcodec_mini_infer/vocos/: __init__.py  experiment.py  feature_extractors.py  heads.py  models.py  pretrained.py
