[project]
name = "yue"
description = " Yue is a groundbreaking series of open-source foundation models designed for music generation, specifically for transforming lyrics into full songs (lyrics2song). you can use it in comfyUI"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["torch", "omegaconf", "torchaudio", "einops", "numpy", "transformers", "sentencepiece", "tqdm", "tensorboard", "descript-audiotools>=0.7.2", "descript-audio-codec", "scipy==1.10.1", "accelerate>=0.26.0", "bitsandbytes", "exllamav2", "mmpg"]

[project.urls]
Repository = "https://github.com/smthemex/ComfyUI_YuE"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "smthemex"
DisplayName = "ComfyUI_YuE"
Icon = ""
